--- a/src/test/resources/allure.properties
+++ b/src/test/resources/allure.properties
@@ -1,3 +1,4 @@
 allure.results.directory=target/allure-results
 allure.link.issue.pattern=https://suzanskayana.atlassian.net/browse/{}
 allure.link.tms.pattern=https://suzanskayana.atlassian.net/browse/{}
+allure.link.pattern =https://suzanskayana.atlassian.net/browse/{}
